<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.prigasolutions.spnb.Login">

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/fulllogo"
        android:layout_gravity="center_horizontal"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/iv_logo" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:background="@drawable/edit_text_box"
        android:id="@+id/et_email"
        android:hint="@string/email"
        android:layout_below="@+id/iv_logo"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="10dp"
        android:textSize="15sp"
        android:padding="10dp"
        android:typeface="monospace"
        android:textStyle="normal"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:textColorHint="#B3B3B3"
        android:textColor="#B3B3B3" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/Password"
        android:background="@drawable/edit_text_box"
        android:hint="@string/kata_laluan"
        android:textSize="15sp"
        android:padding="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:typeface="monospace"
        android:textStyle="normal"
        android:layout_below="@+id/et_email"
        android:layout_alignLeft="@+id/et_email"
        android:layout_alignStart="@+id/et_email"
        android:layout_alignRight="@+id/et_email"
        android:layout_alignEnd="@+id/et_email"
        android:textColorHint="#B3B3B3"
        android:textColor="#B3B3B3" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Login"
        android:id="@+id/button"
        android:layout_marginTop="5dp"
        android:background="#F3554A"
        android:textAllCaps="false"
        android:typeface="normal"
        android:padding="10dp"
        android:textColor="#FFFFFF"
        android:textSize="15sp"
        android:layout_below="@+id/Password"
        android:textAlignment="center"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:enabled="false"
        android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Daftar"
            android:paddingTop="10dp"
            android:id="@+id/tv_reg"
            android:layout_below="@+id/button"
            android:layout_gravity="left"
            android:textSize="15sp"
            android:onClick="true"
            android:layout_marginBottom="5dp"
            android:layout_alignLeft="@+id/button"
            android:textStyle="bold"
            android:textColor="@color/abc_search_url_text_pressed" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Lupa kata laluan"
            android:layout_below="@+id/button"
            android:paddingTop="10dp"
            android:textSize="15sp"
            android:onClick="true"
            android:layout_alignRight="@+id/button"
            android:id="@+id/log_forgot_pass"
            android:textStyle="bold"
            android:textColor="@color/abc_search_url_text_pressed" />


</RelativeLayout>
