<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <RelativeLayout
        android:orientation="vertical" android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
                android:layout_width="match_parent"
            android:id="@+id/map_linear_layout"
                android:layout_height="250dp">

             <fragment
                android:id="@+id/map"
                android:name="com.example.prigasolutions.spnb.MapFragment"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/map_linear_layout"
            android:padding="10dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/registration_form_title"
                android:layout_margin="5dp"
                android:textColor="#3b3b3b"
                android:textSize="20sp"
                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:hint="Nama *"
                android:layout_marginBottom="10dp"
                android:typeface="monospace"
                android:textStyle="normal"
                android:textSize="15sp"
                android:padding="10dp"
                android:background="@drawable/edit_text_box"
                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:hint="IC NO *"
                android:layout_marginBottom="10dp"
                android:typeface="monospace"
                android:textStyle="normal"
                android:textSize="15sp"
                android:padding="10dp"
                android:background="@drawable/edit_text_box" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Janita"
                    android:textColor="#3b3b3b"
                    android:layout_margin="5dp"
                    android:textSize="15sp"/>
                    <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:showDividers="middle"
                        android:divider="@drawable/empty_tall_divider">
                        <RadioButton android:id="@+id/radio_male"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            style="@style/AppTheme.CompoundButton.RadioButton"
                            android:text="  Pria"
                            android:layout_margin="5dp"
                            android:checked="true"
                            android:textSize="20dp"
                            android:onClick="onRadioButtonClicked"
                            />
                        <RadioButton android:id="@+id/radio_female"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="5dp"
                            style="@style/AppTheme.CompoundButton.RadioButton"
                            android:text="  Perempuam"
                            android:textSize="20dp"
                            android:onClick="onRadioButtonClicked"/>
                    </RadioGroup>
            </LinearLayout>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:hint="Email *"
                android:layout_marginBottom="10dp"
                android:typeface="monospace"
                android:textStyle="normal"
                android:textSize="15sp"
                android:padding="10dp"
                android:background="@drawable/edit_text_box" />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:hint="Telefon *"
                android:layout_marginBottom="10dp"
                android:typeface="monospace"
                android:textStyle="normal"
                android:textSize="15sp"
                android:padding="10dp"
                android:background="@drawable/edit_text_box" />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:hint="Kata laluan *"
                android:layout_marginBottom="10dp"
                android:typeface="monospace"
                android:textStyle="normal"
                android:textSize="15sp"
                android:padding="10dp"
                android:background="@drawable/edit_text_box" />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:hint="Semak kata laluan *"
                android:layout_marginBottom="10dp"
                android:typeface="monospace"
                android:textStyle="normal"
                android:textSize="15sp"
                android:padding="10dp"
                android:background="@drawable/edit_text_box" />
            <Spinner
                android:id="@+id/dropdown"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/dropdown_small"
                android:spinnerMode="dropdown" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Apak ini rumah"
                        android:textColor="#3b3b3b"
                        android:textSize="15sp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:lines="2"
                        android:text="pertama Anda?"
                        android:textColor="#3b3b3b"
                        android:textSize="15sp"/>
                </LinearLayout>
                <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:showDividers="middle"
                    android:divider="@drawable/empty_tall_divider">
                    <RadioButton android:id="@+id/radio_yes"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/AppTheme.CompoundButton.RadioButton"
                        android:text="  Benar"
                        android:layout_margin="5dp"
                        android:checked="true"
                        android:textSize="20dp"
                        android:onClick="onRadioButtonClicked"
                        />
                    <RadioButton android:id="@+id/radio_no"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        style="@style/AppTheme.CompoundButton.RadioButton"
                        android:text="  Tidak"
                        android:textSize="20dp"
                        android:onClick="onRadioButtonClicked"/>
                </RadioGroup>
            </LinearLayout>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:hint="Jumlah pendapatan serumah *"
                android:layout_marginBottom="10dp"
                android:typeface="monospace"
                android:textStyle="normal"
                android:textSize="15sp"
                android:padding="10dp"
                android:background="@drawable/edit_text_box" />
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Daftar"
                android:id="@+id/button"
                android:background="#F3554A"
                android:layout_marginTop="5dp"
                android:textAllCaps="false"
                android:layout_marginBottom="@dimen/margin_15dp"
                android:typeface="normal"
                android:padding="10dp"
                android:textColor="#FFFFFF"
                android:textSize="15sp"
                android:textStyle="bold" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Lokasi Kami"
                android:layout_margin="5dp"
                android:textColor="#3b3b3b"
                android:textSize="20sp"
                />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#969696"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/our_location"
                    android:layout_margin="5dp"
                    android:textColor="#3b3b3b"
                    android:textSize="10sp"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/our_location2"
                    android:layout_margin="5dp"
                    android:autoLink="email"
                    android:textColorLink="@color/textColorLink"
                    android:textColor="#3b3b3b"
                    android:textSize="10sp"/>

            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
</ScrollView>